add_executable(xb_qname_test qname_test.cpp)
target_link_libraries(xb_qname_test PRIVATE Catch2::Catch2WithMain xb_header)
target_compile_features(xb_qname_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_qname_test COMMAND xb_qname_test)

add_executable(xb_any_attribute_test any_attribute_test.cpp)
target_link_libraries(xb_any_attribute_test PRIVATE Catch2::Catch2WithMain xb_header)
target_compile_features(xb_any_attribute_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_any_attribute_test COMMAND xb_any_attribute_test)

add_executable(xb_any_element_test any_element_test.cpp)
target_link_libraries(xb_any_element_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_any_element_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_any_element_test COMMAND xb_any_element_test)

add_executable(xb_xml_reader_test xml_reader_test.cpp)
target_link_libraries(xb_xml_reader_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_xml_reader_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_xml_reader_test COMMAND xb_xml_reader_test)

add_executable(xb_xml_writer_test xml_writer_test.cpp)
target_link_libraries(xb_xml_writer_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_xml_writer_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_xml_writer_test COMMAND xb_xml_writer_test)

add_executable(xb_integer_test integer_test.cpp)
target_link_libraries(xb_integer_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_integer_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_integer_test COMMAND xb_integer_test)

add_executable(xb_decimal_test decimal_test.cpp)
target_link_libraries(xb_decimal_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_decimal_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_decimal_test COMMAND xb_decimal_test)

add_executable(xb_year_month_duration_test year_month_duration_test.cpp)
target_link_libraries(xb_year_month_duration_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_year_month_duration_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_year_month_duration_test COMMAND xb_year_month_duration_test)

add_executable(xb_day_time_duration_test day_time_duration_test.cpp)
target_link_libraries(xb_day_time_duration_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_day_time_duration_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_day_time_duration_test COMMAND xb_day_time_duration_test)

add_executable(xb_duration_test duration_test.cpp)
target_link_libraries(xb_duration_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_duration_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_duration_test COMMAND xb_duration_test)

add_executable(xb_date_test date_test.cpp)
target_link_libraries(xb_date_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_date_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_date_test COMMAND xb_date_test)

add_executable(xb_time_test time_test.cpp)
target_link_libraries(xb_time_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_time_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_time_test COMMAND xb_time_test)

add_executable(xb_date_time_test date_time_test.cpp)
target_link_libraries(xb_date_time_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_date_time_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_date_time_test COMMAND xb_date_time_test)

add_executable(xb_type_map_test type_map_test.cpp)
target_link_libraries(xb_type_map_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_type_map_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_type_map_test COMMAND xb_type_map_test)

add_executable(xb_schema_model_test schema_model_test.cpp)
target_link_libraries(xb_schema_model_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_schema_model_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_schema_model_test COMMAND xb_schema_model_test)

add_executable(xb_schema_test schema_test.cpp)
target_link_libraries(xb_schema_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_schema_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_schema_test COMMAND xb_schema_test)

add_executable(xb_schema_set_test schema_set_test.cpp)
target_link_libraries(xb_schema_set_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_schema_set_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_schema_set_test COMMAND xb_schema_set_test)

add_executable(xb_schema_parser_test schema_parser_test.cpp)
target_link_libraries(xb_schema_parser_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_schema_parser_test PRIVATE cxx_std_${xb_CXX_STANDARD})
target_compile_definitions(xb_schema_parser_test PRIVATE
  XB_SCHEMA_DIR=${PROJECT_SOURCE_DIR}/schema)
add_test(NAME xb_schema_parser_test COMMAND xb_schema_parser_test)

add_executable(xb_codegen_test codegen_test.cpp)
target_link_libraries(xb_codegen_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_codegen_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_codegen_test COMMAND xb_codegen_test)

add_executable(xb_naming_test naming_test.cpp)
target_link_libraries(xb_naming_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_naming_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_naming_test COMMAND xb_naming_test)

add_executable(xb_cpp_code_test cpp_code_test.cpp)
target_link_libraries(xb_cpp_code_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_cpp_code_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_cpp_code_test COMMAND xb_cpp_code_test)

add_executable(xb_typemap_schema_test typemap_schema_test.cpp)
target_link_libraries(xb_typemap_schema_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_typemap_schema_test PRIVATE cxx_std_${xb_CXX_STANDARD})
target_compile_definitions(xb_typemap_schema_test PRIVATE
  XB_SCHEMA_DIR=${PROJECT_SOURCE_DIR}/schema)
add_test(NAME xb_typemap_schema_test COMMAND xb_typemap_schema_test)

add_executable(xb_xml_value_test xml_value_test.cpp)
target_link_libraries(xb_xml_value_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_xml_value_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_xml_value_test COMMAND xb_xml_value_test)

add_executable(xb_xml_io_test xml_io_test.cpp)
target_link_libraries(xb_xml_io_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_xml_io_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_xml_io_test COMMAND xb_xml_io_test)

add_executable(xb_xpath_expr_test xpath_expr_test.cpp)
target_link_libraries(xb_xpath_expr_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_xpath_expr_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_xpath_expr_test COMMAND xb_xpath_expr_test)

add_executable(xb_doc_generator_test doc_generator_test.cpp)
target_link_libraries(xb_doc_generator_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_doc_generator_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_doc_generator_test COMMAND xb_doc_generator_test)

add_executable(xb_schema_fetcher_test schema_fetcher_test.cpp)
target_link_libraries(xb_schema_fetcher_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_schema_fetcher_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_schema_fetcher_test COMMAND xb_schema_fetcher_test)

add_executable(xb_rng_pattern_test rng_pattern_test.cpp)
target_link_libraries(xb_rng_pattern_test PRIVATE Catch2::Catch2WithMain xb_header)
target_compile_features(xb_rng_pattern_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_rng_pattern_test COMMAND xb_rng_pattern_test)

add_executable(xb_rng_parser_test rng_parser_test.cpp)
target_link_libraries(xb_rng_parser_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_rng_parser_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_rng_parser_test COMMAND xb_rng_parser_test)

add_executable(xb_rng_simplify_test rng_simplify_test.cpp)
target_link_libraries(xb_rng_simplify_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_rng_simplify_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_rng_simplify_test COMMAND xb_rng_simplify_test)

add_executable(xb_rng_translator_test rng_translator_test.cpp)
target_link_libraries(xb_rng_translator_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_rng_translator_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_rng_translator_test COMMAND xb_rng_translator_test)

add_executable(xb_rng_compact_parser_test rng_compact_parser_test.cpp)
target_link_libraries(xb_rng_compact_parser_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_rng_compact_parser_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_rng_compact_parser_test COMMAND xb_rng_compact_parser_test)

add_executable(xb_dtd_model_test dtd_model_test.cpp)
target_link_libraries(xb_dtd_model_test PRIVATE Catch2::Catch2WithMain xb_header)
target_compile_features(xb_dtd_model_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_dtd_model_test COMMAND xb_dtd_model_test)

add_executable(xb_dtd_parser_test dtd_parser_test.cpp)
target_link_libraries(xb_dtd_parser_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_dtd_parser_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_dtd_parser_test COMMAND xb_dtd_parser_test)

add_executable(xb_dtd_translator_test dtd_translator_test.cpp)
target_link_libraries(xb_dtd_translator_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_dtd_translator_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_dtd_translator_test COMMAND xb_dtd_translator_test)

add_executable(xb_schematron_model_test schematron_model_test.cpp)
target_link_libraries(xb_schematron_model_test PRIVATE Catch2::Catch2WithMain xb_header)
target_compile_features(xb_schematron_model_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_schematron_model_test COMMAND xb_schematron_model_test)

add_executable(xb_schematron_parser_test schematron_parser_test.cpp)
target_link_libraries(xb_schematron_parser_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_schematron_parser_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_schematron_parser_test COMMAND xb_schematron_parser_test)

add_executable(xb_schematron_overlay_test schematron_overlay_test.cpp)
target_link_libraries(xb_schematron_overlay_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_schematron_overlay_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_schematron_overlay_test COMMAND xb_schematron_overlay_test)

add_executable(xb_soap_model_test soap_model_test.cpp)
target_link_libraries(xb_soap_model_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_soap_model_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_soap_model_test COMMAND xb_soap_model_test)

add_executable(xb_soap_envelope_test soap_envelope_test.cpp)
target_link_libraries(xb_soap_envelope_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_soap_envelope_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_soap_envelope_test COMMAND xb_soap_envelope_test)

add_executable(xb_soap_fault_test soap_fault_test.cpp)
target_link_libraries(xb_soap_fault_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_soap_fault_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_soap_fault_test COMMAND xb_soap_fault_test)

add_executable(xb_soap_header_test soap_header_test.cpp)
target_link_libraries(xb_soap_header_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_soap_header_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_soap_header_test COMMAND xb_soap_header_test)

add_executable(xb_soap_integration_test soap_integration_test.cpp)
target_link_libraries(xb_soap_integration_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_soap_integration_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_soap_integration_test COMMAND xb_soap_integration_test)

add_executable(xb_wsdl_model_test wsdl_model_test.cpp)
target_link_libraries(xb_wsdl_model_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wsdl_model_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsdl_model_test COMMAND xb_wsdl_model_test)

add_executable(xb_wsdl_parser_test wsdl_parser_test.cpp)
target_link_libraries(xb_wsdl_parser_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wsdl_parser_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsdl_parser_test COMMAND xb_wsdl_parser_test)

add_executable(xb_service_model_test service_model_test.cpp)
target_link_libraries(xb_service_model_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_service_model_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_service_model_test COMMAND xb_service_model_test)

add_executable(xb_wsdl_resolver_test wsdl_resolver_test.cpp)
target_link_libraries(xb_wsdl_resolver_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wsdl_resolver_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsdl_resolver_test COMMAND xb_wsdl_resolver_test)

add_executable(xb_wsdl_support_test wsdl_support_test.cpp)
target_link_libraries(xb_wsdl_support_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wsdl_support_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsdl_support_test COMMAND xb_wsdl_support_test)

add_executable(xb_wsdl_codegen_test wsdl_codegen_test.cpp)
target_link_libraries(xb_wsdl_codegen_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wsdl_codegen_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsdl_codegen_test COMMAND xb_wsdl_codegen_test)

add_executable(xb_wsdl_server_codegen_test wsdl_server_codegen_test.cpp)
target_link_libraries(xb_wsdl_server_codegen_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wsdl_server_codegen_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsdl_server_codegen_test COMMAND xb_wsdl_server_codegen_test)

add_executable(xb_http_transport_test http_transport_test.cpp)
target_link_libraries(xb_http_transport_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_http_transport_test PRIVATE cxx_std_${xb_CXX_STANDARD})
if(CURL_FOUND)
  target_compile_definitions(xb_http_transport_test PRIVATE XB_HAS_CURL)
endif()
add_test(NAME xb_http_transport_test COMMAND xb_http_transport_test)

add_executable(xb_wsa_test wsa_test.cpp)
target_link_libraries(xb_wsa_test PRIVATE Catch2::Catch2WithMain xb_header)
target_compile_features(xb_wsa_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsa_test COMMAND xb_wsa_test)

add_executable(xb_wsa_headers_test wsa_headers_test.cpp)
target_link_libraries(xb_wsa_headers_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wsa_headers_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsa_headers_test COMMAND xb_wsa_headers_test)

add_executable(xb_wsa_handler_test wsa_handler_test.cpp)
target_link_libraries(xb_wsa_handler_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wsa_handler_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsa_handler_test COMMAND xb_wsa_handler_test)

add_executable(xb_wss_test wss_test.cpp)
target_link_libraries(xb_wss_test PRIVATE Catch2::Catch2WithMain xb_header)
target_compile_features(xb_wss_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wss_test COMMAND xb_wss_test)

add_executable(xb_wss_headers_test wss_headers_test.cpp)
target_link_libraries(xb_wss_headers_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wss_headers_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wss_headers_test COMMAND xb_wss_headers_test)

add_executable(xb_wss_handler_test wss_handler_test.cpp)
target_link_libraries(xb_wss_handler_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wss_handler_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wss_handler_test COMMAND xb_wss_handler_test)

add_executable(xb_wss_crypto_test wss_crypto_test.cpp)
target_link_libraries(xb_wss_crypto_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wss_crypto_test PRIVATE cxx_std_${xb_CXX_STANDARD})
if(OPENSSL_FOUND)
  target_compile_definitions(xb_wss_crypto_test PRIVATE XB_HAS_OPENSSL)
endif()
add_test(NAME xb_wss_crypto_test COMMAND xb_wss_crypto_test)

add_executable(xb_mime_multipart_test mime_multipart_test.cpp)
target_link_libraries(xb_mime_multipart_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_mime_multipart_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_mime_multipart_test COMMAND xb_mime_multipart_test)

add_executable(xb_xop_test xop_test.cpp)
target_link_libraries(xb_xop_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_xop_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_xop_test COMMAND xb_xop_test)

add_executable(xb_mtom_transport_test mtom_transport_test.cpp)
target_link_libraries(xb_mtom_transport_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_mtom_transport_test PRIVATE cxx_std_${xb_CXX_STANDARD})
if(CURL_FOUND)
  target_compile_definitions(xb_mtom_transport_test PRIVATE XB_HAS_CURL)
endif()
add_test(NAME xb_mtom_transport_test COMMAND xb_mtom_transport_test)

add_executable(xb_wsdl2_model_test wsdl2_model_test.cpp)
target_link_libraries(xb_wsdl2_model_test PRIVATE Catch2::Catch2WithMain xb_header)
target_compile_features(xb_wsdl2_model_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsdl2_model_test COMMAND xb_wsdl2_model_test)

add_executable(xb_wsdl2_parser_test wsdl2_parser_test.cpp)
target_link_libraries(xb_wsdl2_parser_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wsdl2_parser_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsdl2_parser_test COMMAND xb_wsdl2_parser_test)

add_executable(xb_wsdl2_resolver_test wsdl2_resolver_test.cpp)
target_link_libraries(xb_wsdl2_resolver_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wsdl2_resolver_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsdl2_resolver_test COMMAND xb_wsdl2_resolver_test)

add_executable(xb_wsdl2_codegen_test wsdl2_codegen_test.cpp)
target_link_libraries(xb_wsdl2_codegen_test PRIVATE Catch2::Catch2WithMain xb)
target_compile_features(xb_wsdl2_codegen_test PRIVATE cxx_std_${xb_CXX_STANDARD})
add_test(NAME xb_wsdl2_codegen_test COMMAND xb_wsdl2_codegen_test)
